--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@rneui/base": "^4.0.0-rc.5",
@@ -20,8 +21,9 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-safe-area-context": "4.2.4",
-    "react-native-web": "^0.17.7",
-    "react-native-screens": "~3.11.1"
+    "react-native-screens": "~3.11.1",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "^0.17.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
